  TEZ-3571. Tez UI: Display a Total Timeline View for Hive Queries
  TEZ-2712. Tez UI: Display the vertex description in the tooltip of vertex in DAG view UI
  TEZ-3583. Tez UI: UTs are flaky because of a dependency issue
  TEZ-3580. Tez UI: Pagination broken on queries page
  TEZ-3575. RM have started forwarding origin. Use that in AMWebController for CORS support

Release 0.8.5: Unreleased

INCOMPATIBLE CHANGES

ALL CHANGES:

  TEZ-3462. Task attempt failure during container shutdown loses useful container diagnostics
  TEZ-3574. Container reuse won't pickup extra dag level local resource.
  TEZ-3566. Avoid caching fs isntances in TokenCache after a point.
  TEZ-3568. Update SecurityUtils configuration to pick user provided configuration.
  TEZ-3559. TEZ_LIB_URIS doesn't work with schemes different than the defaultFS
  TEZ-3549. TaskAttemptImpl does not initialize TEZ_TASK_PROGRESS_STUCK_INTERVAL_MS correctly
  TEZ-3537. ArrayIndexOutOfBoundsException with empty environment variables/Port YARN-3768 to Tez
  TEZ-3536. NPE in WebUIService start when host resolution fails.
  TEZ-3534. Differentiate thread names on Fetchers, minor changes to shuffle shutdown code.
  TEZ-3491. Tez job can hang due to container priority inversion.
  TEZ-3533. ShuffleScheduler should shutdown threadpool on exit.
  TEZ-3493. DAG submit timeout cannot be set to a month
  TEZ-3505. Move license to the file header for TezBytesWritableSerialization
  TEZ-3486. COMBINE_OUTPUT_RECORDS/COMBINE_INPUT_RECORDS are not correct
  TEZ-3097. Flaky test: TestCommit.testDAGCommitStartedEventFail_OnDAGSuccess.
  TEZ-3437. Improve synchronization and the progress report behavior for Inputs from TEZ-3317.
  TEZ-3317. Speculative execution starts too early due to 0 progress.
  TEZ-3452. Auto-reduce parallelism calculation can overflow with large inputs
  TEZ-3439. Tez joinvalidate fails when first input argument size is bigger than the second.
  TEZ-3464. Fix findbugs warnings in tez-dag mainLoop