@@ -394,31 +394,53 @@ public class TestTaskSchedulerManager {
 
     // ensure history url is empty when timeline server is not the logging class
     conf.set(TezConfiguration.TEZ_HISTORY_URL_BASE, "http://ui-host:9999");
-    assertTrue("http://ui-host:9999/#/tez-app/TEST_APP_ID"
-        .equals(schedulerHandler.getHistoryUrl()));
+    assertEquals("http://ui-host:9999/#/tez-app/TEST_APP_ID",
+        schedulerHandler.getHistoryUrl());
 
     // ensure the trailing / in history url is handled
     conf.set(TezConfiguration.TEZ_HISTORY_URL_BASE, "http://ui-host:9998/");
-    assertTrue("http://ui-host:9998/#/tez-app/TEST_APP_ID"
-        .equals(schedulerHandler.getHistoryUrl()));
+    assertEquals("http://ui-host:9998/#/tez-app/TEST_APP_ID",
+        schedulerHandler.getHistoryUrl());
 
     // ensure missing scheme in history url is handled
     conf.set(TezConfiguration.TEZ_HISTORY_URL_BASE, "ui-host:9998/");
-    Assert.assertTrue("http://ui-host:9998/#/tez-app/TEST_APP_ID"
-        .equals(schedulerHandler.getHistoryUrl()));
+    assertEquals("http://ui-host:9998/#/tez-app/TEST_APP_ID",
+        schedulerHandler.getHistoryUrl());
 
     // handle bad template ex without begining /
     conf.set(TezConfiguration.TEZ_AM_TEZ_UI_HISTORY_URL_TEMPLATE,
         "__HISTORY_URL_BASE__#/somepath");
-    assertTrue("http://ui-host:9998/#/somepath"
-        .equals(schedulerHandler.getHistoryUrl()));
+    assertEquals("http://ui-host:9998/#/somepath",
+        schedulerHandler.getHistoryUrl());
 
     conf.set(TezConfiguration.TEZ_AM_TEZ_UI_HISTORY_URL_TEMPLATE,
         "__HISTORY_URL_BASE__?viewPath=tez-app/__APPLICATION_ID__");
     conf.set(TezConfiguration.TEZ_HISTORY_URL_BASE, "http://localhost/ui/tez");
-    assertTrue("http://localhost/ui/tez?viewPath=tez-app/TEST_APP_ID"
-        .equals(schedulerHandler.getHistoryUrl()));
+    assertEquals("http://localhost/ui/tez?viewPath=tez-app/TEST_APP_ID",
+        schedulerHandler.getHistoryUrl());
 
+  }
+
+  @Test (timeout = 5000)
+  public void testHistoryUrlWithoutScheme() throws Exception {
+    Configuration conf = schedulerHandler.appContext.getAMConf();
+    final ApplicationId mockApplicationId = mock(ApplicationId.class);
+    doReturn("TEST_APP_ID").when(mockApplicationId).toString();
+    doReturn(mockApplicationId).when(mockAppContext).getApplicationID();
+
+    conf.set(TezConfiguration.TEZ_HISTORY_URL_BASE, "/foo/bar/");
+    conf.setBoolean(TezConfiguration.TEZ_AM_UI_HISTORY_URL_SCHEME_CHECK_ENABLED, false);
+    assertEquals("/foo/bar/#/tez-app/TEST_APP_ID",
+        schedulerHandler.getHistoryUrl());
+
+    conf.set(TezConfiguration.TEZ_HISTORY_URL_BASE, "ui-host:9998/foo/bar/");
+    assertEquals("ui-host:9998/foo/bar/#/tez-app/TEST_APP_ID",
+        schedulerHandler.getHistoryUrl());
+
+    conf.setBoolean(TezConfiguration.TEZ_AM_UI_HISTORY_URL_SCHEME_CHECK_ENABLED, true);
+    conf.set(TezConfiguration.TEZ_HISTORY_URL_BASE, "ui-host:9998/foo/bar/");
+    assertEquals("http://ui-host:9998/foo/bar/#/tez-app/TEST_APP_ID",
+        schedulerHandler.getHistoryUrl());
   }
 
   @Test(timeout = 5000)
