@@ -177,6 +177,7 @@ ALL CHANGES:
   TEZ-3583. Tez UI: UTs are flaky because of a dependency issue
   TEZ-3580. Tez UI: Pagination broken on queries page
   TEZ-3575. RM have started forwarding origin. Use that in AMWebController for CORS support
+  TEZ-3494. Support relative url for tez-ui.history-url.base config
 
 Release 0.8.5: Unreleased
 
